# learn-cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: bar.cppm  foo.cppm  hello.cpp  main.cpp
src/modules/: bar.cppm  foo.cppm
